--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
-<footer class="bg-zenInfo text-center text-white">
-  <div class="container p-4 pb-0">
+<div class="">
+<footer class="bg-zenInfo text-center text-white footer">
+  <div class="container p-4 pb-0" >
     <!-- Section: Social media -->
     <section class="mb-4">
       <a class="btn btn-outline-light btn-floating mx-1" href="#!" role="button"
@@ -29,6 +30,7 @@
 
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     
-    <a class="text-white" href="https://mdbootstrap.com/">Forged By Riddle Of Steel</a>
+    <a class="text-white" href="https://github.com/uralrdybread">Forged By The Riddle Of Steel</a>
   </div>
 </footer>
+</div>
