--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,9 +1,6 @@
-footer {
+.footer {
         font-family: "nunito", sans-serif;
-        
-        
-        position: absolute;
-        width: 100%;
+        position: relative;
 
     }
 a, u {
