--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,6 @@
           <h1 class="">COFFEE<span>/</span>BREAD<span>/</span>ZEN</h1>
           <h1 class="">COFFEE<span>/</span>BREAD<span>/</span>ZEN</h1>
           <h1 class="">COFFEE<span>/</span>BREAD<span>/</span>ZEN</h1>
-          
         </div>
     </div>
     <div class="col-md-6">
@@ -75,5 +74,5 @@
     </div>
   </div>
   </section>
-
+  <app-footer></app-footer>
 
