--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,12 +1,6 @@
-<div class="container">
-    <div class="row align-items-center">
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
-<h1>List of Coffee and Bread</h1>
+<div class="outer-background">
+    <div class="bg-zenDanger container text-center d-flex flex-column min-vh-100">
+        
     </div>
 </div>
+<app-footer class="footer mt-auto"></app-footer>
