--- a/src/app/locationcontact/locationcontact.component.html
+++ b/src/app/locationcontact/locationcontact.component.html
@@ -1,14 +1,40 @@
-<div class="container text-center">
-    <div class="row align-items-center mt-5">
-        <div class="col-4">
-            <h1>Address and Contact information</h1>
-
+<div class="bg-zenDanger min-vh-100">
+    <section class="container-fluid">
+      <div class="row align-items-center">
+        <div class="col-md-6">
+            <div id="headingGroup" class="text-white text-center d-none d-md-block mt-5">
+                <h1>270 Lafayette St, New York, NY 10012</h1>
+            </div>
         </div>
-        <div class="col-8">
-                <div class="mapouter"><div class="gmap_canvas">
+        <div class="col-md-6 align-items-center mt-5">
+            <iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=270%20Lafayette%20Street,%20New%20York,%20NY&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
+        </div>
+      </div>
+    </section>
+</div>
+<app-footer class="footer mt-auto"></app-footer>
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="outer-background">
+    <div class="bg-zenDanger container text-center d-flex flex-column min-vh-100" >
+        <div class="row align-items-center mt-5">
+            <div class="col-4">
+                <h1>270 Lafayette St, New York, NY 10012</h1>
+            </div>
+            <div class="col-8">
+                <div class="align-items-center">
                     <iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=270%20Lafayette%20Street,%20New%20York,%20NY&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
