--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,37 @@
 <div class="outer-background">
     <div class="bg-zenDanger container text-center d-flex flex-column min-vh-100">
-        
+        <div class="mt-5">
+            <h1 class="my-4">Coffees</h1>
+            <p class="sigdrinks">Signiture Drinks</p>
+            <p class="drinkname">Espresso Fizz</p>
+            <p class="mb-3">Sant Aniol Mineral Water, Espresso, simple Syrup </p>
+            <p class="drinkname">Honey Goat Latte</p>
+            <p class="mb-3">Espresso, Terroir Honey Blossom Honey </p>
+            <p class="drinkname">Choc-Oat-Latte</p>
+            <p class="mb-3">Espresso, Chocolate Aromatic Bitters </p>
+            <p class="drinkname">Salted Carmel Mocha</p>
+            <p class="mb-3">Espresso, Salted Caramel, Aromatic Bitters</p>
+            <p class="drinkname">Lavender Good Good</p>
+            <p class="mb-3"> Espresso, Lavender Aromatic Bitters</p>
+            <p class="drinkname">The French Quarter</p>
+            <p class="mb-3">House Roasted Chicory, Espresso, Aromatic Bitters</p>
+        </div>
+        <div class="mt-5">
+            <h1 class="my-4">Breads</h1>
+            <p class="sigdrinks">Baked Fresh Daily</p>
+            <p class="drinkname">WHITE SOURDOUGH</p>
+            <p class="mb-3">76.5% hydration, 7% whole grain. </p>
+            <p class="drinkname">RYE SOURDOUGH</p>
+            <p class="mb-3">60% rye w/ coffee and caraway</p>
+            <p class="drinkname">FOCACCIA</p>
+            <p class="mb-3">$6 slice / $48 / tray castelvetranos, picholines, cured black olives, preserved lemon.</p>
+            <p class="drinkname">CIABATTA ROLL</p>
+            <p class="mb-3">$2 roll / $7.25 loaf 81.5% / hydration. yeasted.</p>
+            <p class="drinkname">SPROUTED RYE</p>
+            <p class="mb-3">$8 half / $15 whole / 100% rye flour, rye berries, pepitas, sunflower seeds. </p>
+            <p class="drinkname">DATE CAKE</p>
+            <p class="mb-3">pepitas, sunflower seeds, warm spices.</p>
+        </div>
     </div>
 </div>
 <app-footer class="footer mt-auto"></app-footer>
