--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -8,5 +8,14 @@
 
 .outer-background {
   background-color: #61714D;
-  font-family: "nunito", sans-serif;
+  font-family:'Courier New', Courier, monospace;
+}
+
+.sigdrinks {
+  font-weight: bold;
+  font-size: 20px
+}
+
+.drinkname {
+  font-weight: bold;
 }
